# google-ai-studio

./: .coverage  .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/api/generate/step1/: route.ts
app/api/generate/step2/: route.ts
app/api/generate/step3/: route.ts
backend/: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: generate.py
backend/app/core/: config.py
backend/app/services/: room_generator.py
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: GenerationForm.tsx  ImageUpload.tsx  ProgressIndicator.tsx  ResultGallery.tsx
frontend/components/ui/: .gitkeep
maven-prime-solution-portfolio/: README.md  ai-playground-section.html  index.html  robots.txt  sitemap.xml
maven-prime-solution-portfolio/.github/workflows/: deploy.yml
maven-prime-solution-portfolio/css/: styles.css
maven-prime-solution-portfolio/js/: app.js
public/fonts/: README.md
scripts/: start-backend.ps1  start-backend.sh
src/google_ai_studio/: room-gen-full.py  text-and-image-to-image.py  text-to-image.py  text-to-text.py
src/google_ai_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/template_package/: __init__.py
tests/: test_example.py
